[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waveresponse"
authors = [
  { name="4Subsea", email="python@4subsea.com" },
]
dynamic = ["version"]
description = "Vessel motion and wave utilities"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix", 
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/4Subsea/waveresponse-python"
"Bug Tracker" = "https://github.com/4Subsea/waveresponse-python/issues"
"Documentation" = "https://docs.4insight.io/waveresponse/python/latest/"

[tool.setuptools.dynamic]
version = {attr = "waveresponse.__version__"}

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    py
    docs

[testenv]
commands =
    pytest --cov=waveresponse --cov-report html:cov_html-{envname} ./tests
deps =
    pytest
    pytest-cov

[testenv:docs]
basepython = python3.9
commands = sphinx-build -W -b html -d {toxworkdir}/docs_doctree docs {toxworkdir}/docs_out
deps =
    sphinx
    pydata-sphinx-theme
"""
